--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,8 +47,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: <aws_target_region>
-          role-to-assume: arn:aws:iam::<aws_account_number>:role/<github-role-name>
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/<github-role-name>
     
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
