--- a/.github/workflows/deploy_go_app.yaml
+++ b/.github/workflows/deploy_go_app.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws_region: ${{ secrets.AWS_REGION }}
-        role-to-assume: arn:aws:iam::<aws_account_number>:role/<github-role-name>
+        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/<github-role-name>
 
     # Log in to Amazon ECR
     - name: Log in to Amazon ECR
